--- a/同态加密.md
+++ b/同态加密.md
@@ -1,1 +1,75 @@
 
+#什么是同态加密？
+
+提出第一个构造出全同态加密（Fully Homomorphic Encryption）[Gen09]的Craig Gentry (士绅) 给出的直观定义最好：
+
+
+这是什么意思呢？一般的加密方案关注的都是数据存储安全。即，我要给其他人发个加密的东西，或者要在计算机或者其他服务器上存一个东西，我要对数据进行加密后在发送或者存储。没有密钥的用户，不可能从加密结果中得到有关原始数据的任何信息。只有拥有密钥的用户才能够正确解密，得到原始的内容。我们注意到，这个过程中用户是不能对加密结果做任何操作的，只能进行存储、传输。对加密结果做任何操作，都将会导致错误的解密，甚至解密失败。同态加密方案最有趣的地方在于，其关注的是数据处理安全。同态加密提供了一种对加密数据进行处理的功能。也就是说，其他人可以对加密数据进行处理，但是处理过程不会泄露任何原始内容。同时，拥有密钥的用户对处理过的数据进行解密后，得到的正好是处理后的结果。
+
+
+举个实际生活中的例子。有个叫Alice的用户买到了一大块金子，她想让工人把这块金子打造成一个项链。但是工人在打造的过程中有可能会偷金子啊，毕竟就是一克金子也值很多钱的说… 因此能不能有一种方法，让工人可以对金块进行加工（delegate(委托)processing of your data），但是不能得到任何金子（without giving away access to it）？当然有办法啦，Alice可以这么做：
+
+Alice将金子锁在一个密闭的盒子里面，这个盒子安装了一个手套。
+工人可以带着这个手套，对盒子内部的金子进行处理。但是盒子是锁着的。
+所以工人不仅拿不到金块，连处理过程中掉下的任何金子都拿不到。
+加工完成后。Alice拿回这个盒子，把锁打开，就得到了金子。
+
+这个盒子的样子大概是这样的：
+![image](https://github.com/790228724/encryption-algorithm_learning-materials/blob/main/img/%E5%90%8C%E6%80%81%E5%8A%A0%E5%AF%86.jpeg)
+
+这里面的对应关系是：
+盒子：加密算法
+盒子上的锁：用户密钥
+将金块放在盒子里面并且用锁锁上：将数据用同态加密方案进行加密
+加工：应用同态特性，在无法取得数据的条件下直接对加密结果进行处理
+开锁：对结果进行解密，直接得到处理后的结果
+
+#同态加密哪里能用？
+
+这几年不是提了个云计算的概念嘛。同态加密几乎就是为云计算而量身打造的！我们考虑下面的情景：一个用户想要处理一个数据，但是他的计算机计算能力较弱。这个用户可以使用云计算的概念，让云来帮助他进行处理而得到结果。但是如果直接将数据交给云，无法保证安全性啊！于是，他可以使用同态加密，然后让云来对加密数据进行直接处理，并将处理结果返回给他。这样一来：
+
+用户向云服务商付款，得到了处理的结果；
+云服务商挣到了费用，并在不知道用户数据的前提下正确处理了数据；
+
+这方法简直完美啊有没有？！但是，这么好的特性肯定会带来一些缺点。同态加密现在最需要解决的问题在于：效率。效率一词包含两个方面，一个是加密数据的处理速度，一个是这个加密方案的数据存储量。我们可以直观地想一想这个问题：
+
+工人戴着手套加工金子，肯定没有直接加工来得快嘛~ 也就是说，隔着手套处理，精准度会变差（现有构造会有误差传递问题），加工的时间也会变得更长（密文的操作花费更长的时间），工人需要隔着操作，因此也需要更专业（会正确调用算法）。
+
+金子放在盒子里面，为了操作，总得做一个稍微大一点的盒子吧，要不然手操作不开啊（存储空间问题）。里面也要放各种工具吧，什么电钻啦，锉刀啦，也需要空间吧？
+
+#这种加密方案真的有在研究？
+
+1.第一个构造出全同态加密方案的人是Gentry，这是他在Stanford攻读博士学位的研究成果。Gentry毕业后去哪里了呢？IBM。大家知道IBM可是一个云服务提供商啊！在IBM，Gentry和另一个密码学大牛Halevi继续进行同态加密及其相关的研究，并实现了一些同态加密方案。如果IBM真的做出了可以在实际使用的同态加密方案，那么其他云服务提供商就可以拜拜了啊！这游戏不用玩了啊，人家能在不知道数据内容得前提下处理数据啊，毕竟谁都不想把数据泄露给其他公司啊！
+
+2.国内的某个大公司（具体是哪个我就不透露了…）对这方面的研究非常感兴趣，我也和他们做了一次交流，并且初步达成了一定的研究大方向。要不怎么我现在也去弄这个头大的东西呢。要知道，国内的公司也没闲着，这是制高点，拿到了就是一家独大，而且是超级技术垄断，不公开源代码或者不了解内部构造的话想仿造都仿造不了啊…不过，这方面的研究说实话Gap确实大，入门起码要3个月的时间，还不一定做的出来…
+
+3.即使没有实现全同态加密，也可以得到其他一些很有趣的结论。而每一个结论都可能引发技术垄断。这些结论由于涉及到了一定的基础知识，我在后面中会进行介绍。
+
+#同态加密具体如何定义？
+
+我们在云计算应用场景下面进行介绍：
+![image](https://github.com/790228724/encryption-algorithm_learning-materials/blob/main/img/%E5%90%8C%E6%80%81%E5%8A%A0%E5%AF%86-2.jpeg)
+1.Alice通过Cloud，以Homomorphic Encryption（以下简称HE）处理数据的整个处理过程大致是这样的：
+2.Alice对数据进行加密。并把加密后的数据发送给Cloud；
+3.Alice向Cloud提交数据的处理方法，这里用函数f来表示；
+4。Cloud在函数f下对数据进行处理，并且将处理后的结果发送给Alice；
+5.Alice对数据进行解密，得到结果。
+
+据此，我们可以很直观的得到一个HE方案应该拥有的函数：
+
+1.KeyGen函数：密钥生成函数。这个函数应该由Alice运行，用于产生加密数据Data所用的密钥Key。当然了，应该还有一些公开常数PP（Public Parameter(参数);
+
+2.Encrypt函数：加密函数。这个函数也应该由Alice运行，用Key对用户数据Data进行加密，得到密文CT（Ciphertext);
+
+3.Evaluate函数：评估函数。这个函数由Cloud运行，在用户给定的数据处理方法f下，对密文进行操作，使得结果相当于用户用密钥Key对f(Data)进行加密。
+
+4.Decrypt函数：解密函数。这个函数由Alice运行，用于得到Cloud处理的结果f(Data)。
+
+那么，f应该是什么样子的呢？HE方案是支持任意的数据处理方法f？还是说只支持满足一定条件的f呢？根据f的限制条件不同，HE方案实际上分为了两类：
+
+1.Fully Homomorphic Encryption(加密)(FHE)：这意味着HE方案支持任意给定的f函数，只要这个f函数可以通过算法描述，用计算机实现。显然，FHE方案是一个非常棒的方案，但是计算开销极大，暂时还无法在实际中使用。
+          
+2.Somewhat Homomorphic Encryption(加密)(SWHE)：这意味着HE方案只支持一些特定的f函数。SWHE方案稍弱，但也意味着开销会变得较小，容易实现，现在已经可以在实际中使用。
+
+
+
