--- a/同态加密.md
+++ b/同态加密.md
@@ -1,5 +1,5 @@
 
-#什么是同态加密？
+# 什么是同态加密？
 
 提出第一个构造出全同态加密（Fully Homomorphic Encryption）[Gen09]的Craig Gentry (士绅) 给出的直观定义最好：
 
@@ -25,7 +25,7 @@ Alice将金子锁在一个密闭的盒子里面，这个盒子安装了一个手
 加工：应用同态特性，在无法取得数据的条件下直接对加密结果进行处理
 开锁：对结果进行解密，直接得到处理后的结果
 
-#同态加密哪里能用？
+# 同态加密哪里能用？
 
 这几年不是提了个云计算的概念嘛。同态加密几乎就是为云计算而量身打造的！我们考虑下面的情景：一个用户想要处理一个数据，但是他的计算机计算能力较弱。这个用户可以使用云计算的概念，让云来帮助他进行处理而得到结果。但是如果直接将数据交给云，无法保证安全性啊！于是，他可以使用同态加密，然后让云来对加密数据进行直接处理，并将处理结果返回给他。这样一来：
 
@@ -38,7 +38,7 @@ Alice将金子锁在一个密闭的盒子里面，这个盒子安装了一个手
 
 金子放在盒子里面，为了操作，总得做一个稍微大一点的盒子吧，要不然手操作不开啊（存储空间问题）。里面也要放各种工具吧，什么电钻啦，锉刀啦，也需要空间吧？
 
-#这种加密方案真的有在研究？
+# 这种加密方案真的有在研究？
 
 1.第一个构造出全同态加密方案的人是Gentry，这是他在Stanford攻读博士学位的研究成果。Gentry毕业后去哪里了呢？IBM。大家知道IBM可是一个云服务提供商啊！在IBM，Gentry和另一个密码学大牛Halevi继续进行同态加密及其相关的研究，并实现了一些同态加密方案。如果IBM真的做出了可以在实际使用的同态加密方案，那么其他云服务提供商就可以拜拜了啊！这游戏不用玩了啊，人家能在不知道数据内容得前提下处理数据啊，毕竟谁都不想把数据泄露给其他公司啊！
 
@@ -46,7 +46,7 @@ Alice将金子锁在一个密闭的盒子里面，这个盒子安装了一个手
 
 3.即使没有实现全同态加密，也可以得到其他一些很有趣的结论。而每一个结论都可能引发技术垄断。这些结论由于涉及到了一定的基础知识，我在后面中会进行介绍。
 
-#同态加密具体如何定义？
+# 同态加密具体如何定义？
 
 我们在云计算应用场景下面进行介绍：
 ![image](https://github.com/790228724/encryption-algorithm_learning-materials/blob/main/img/%E5%90%8C%E6%80%81%E5%8A%A0%E5%AF%86-2.jpeg)
@@ -66,7 +66,7 @@ Alice将金子锁在一个密闭的盒子里面，这个盒子安装了一个手
 
 4.Decrypt函数：解密函数。这个函数由Alice运行，用于得到Cloud处理的结果f(Data)。
 
-那么，f应该是什么样子的呢？HE方案是支持任意的数据处理方法f？还是说只支持满足一定条件的f呢？根据f的限制条件不同，HE方案实际上分为了两类：
+# 那么，f应该是什么样子的呢？HE方案是支持任意的数据处理方法f？还是说只支持满足一定条件的f呢？根据f的限制条件不同，HE方案实际上分为了两类：
 
 1.Fully Homomorphic Encryption(加密)(FHE)：这意味着HE方案支持任意给定的f函数，只要这个f函数可以通过算法描述，用计算机实现。显然，FHE方案是一个非常棒的方案，但是计算开销极大，暂时还无法在实际中使用。
            
